--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         // this.load.path('./src/');
         // this.load.path = "./src/assets/";
 
-        this.load.image("map", "./src/assets/map.png");
+        this.load.image("map", "./src/assets/map_test.png");
 
         // this.load.image('sky', 'assets/skies/space3.png');
         // this.load.image('map', 'map.png');
