--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     {
         // this.load.setBaseURL('http://labs.phaser.io');
         // this.load.path('./src/');
-        // this.load.path = "./src/assets/";
+        this.load.path = "./src/assets/";
 
-        this.load.image("map", "./src/assets/map_test.png");
+        this.load.image("map", "map_test.png");
 
         // this.load.image('sky', 'assets/skies/space3.png');
         // this.load.image('map', 'map.png');
