--- a/index.html
+++ b/index.html
@@ -28,37 +28,15 @@
 
     function preload ()
     {
-        // this.load.setBaseURL('http://labs.phaser.io');
-        // this.load.path('./src/');
         this.load.path = "./src/assets/";
-
         this.load.image("map", "map_test.png");
 
-        // this.load.image('sky', 'assets/skies/space3.png');
-        // this.load.image('map', 'map.png');
-        // this.load.image('logo', 'assets/sprites/phaser3-logo.png');
-        // this.load.image('red', 'assets/particles/red.png');
     }
 
     function create ()
     {
-        this.add.image(400, 300, 'map');
+        // this.add.image(400, 300, 'map');
 
-        var particles = this.add.particles('red');
-
-        var emitter = particles.createEmitter({
-            speed: 50,
-            scale: { start: 1, end: 0 },
-            blendMode: 'ADD'
-        });
-
-        var logo = this.physics.add.image(400, 100, 'logo');
-
-        logo.setVelocity(100, 200);
-        logo.setBounce(1, 1);
-        logo.setCollideWorldBounds(true);
-
-        emitter.startFollow(logo);
     }
     </script>
 
