--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <link rel="stylesheet" href="style.css">
   <title>Roadhouse event</title>
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
+  <script src=".src/gui_layer.js"></script>
 </head>
 <body>
 
@@ -12,6 +13,7 @@
         type: Phaser.AUTO,
         width: window.innerWidth,
         height: window.innerHeight,
+        backgroundColor: '#848482',
         physics: {
             default: 'arcade',
             arcade: {
@@ -36,7 +38,6 @@
     function create ()
     {
         // this.add.image(400, 300, 'map');
-
     }
     </script>
 
