--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="style.css">
   <title>Roadhouse event</title>
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
-  <script src=".src/gui_layer.js"></script>
+  <script src="src/gui_layer.js"></script>
 </head>
 <body>
 
