--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
          var text = this.add.text(100, 100, '', { font: '64px Courier', fill: '#00ff00' });
     }
 
-    update ()
+    function update ()
     {
         info.setText('Point: 0');
     }
