--- a/index.html
+++ b/index.html
@@ -4,49 +4,11 @@
   <link rel="stylesheet" href="style.css">
   <title>Roadhouse event</title>
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
-  <!-- <script src="src/gui_layer.js"></script> -->
+
 </head>
 <body>
 
-    <script>
-    var config = {
-        type: Phaser.AUTO,
-        width: window.innerWidth,
-        height: window.innerHeight,
-        backgroundColor: '#848482',
-        physics: {
-            default: 'arcade',
-            arcade: {
-                gravity: { y: 200 }
-            }
-        },
-        scene: {
-            preload: preload,
-            create: create
-        }
-    };
-
-    var game = new Phaser.Game(config);
-
-    function preload ()
-    {
-        this.load.path = "./src/assets/";
-        this.load.image("map", "map_test.png");
-
-    }
-
-    function create ()
-    {
-        // this.add.image(400, 300, 'map');
-         var text = this.add.text(100, 100, '', { font: '64px Courier', fill: '#00ff00' });
-    }
-
-    function update ()
-    {
-        info.setText('Point: 0');
-    }
-
-    </script>
+  <script src="src/gui_layer.js"></script>
 
 </body>
 </html>
