hidden enter page

--- a/enter.html
+++ b/enter.html
@@ -9,7 +9,7 @@
 <body>
 
   <script>
-    let loginID = prompt("Your ID is:", [default]);
+    let loginID = prompt('Your ID is:', null);
   </script>
 
 </body>
