--- a/enter.html
+++ b/enter.html
@@ -9,7 +9,10 @@
 <body>
 
   <script>
-    let loginID = prompt('Your ID is:', null);
+    let loginID = prompt('Your ID is:', "");
+    if (loginID == 10) {
+      alert('go to index with cookie');
+    }
   </script>
 
 </body>
