--- a/enter.html
+++ b/enter.html
@@ -12,6 +12,8 @@
     let loginID = prompt('Your ID is:', "");
     if (loginID == 10) {
       alert('go to index with cookie');
+    } else {
+      alert('KEKW');
     }
   </script>
 
