--- a/wheel.html
+++ b/wheel.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="stylesheet" href="wheel.scss">
   <title>Spin it</title>
-
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 </head>
 <body>
