--- a/wheel.html
+++ b/wheel.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta http-equiv="Permissions-Policy" content="interest-cohort=()"/>
   <link rel="stylesheet" href="wheel.scss">
   <title>Spin it</title>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
