--- a/wheel.html
+++ b/wheel.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="Permissions-Policy" content="interest-cohort=()"/>
   <link rel="stylesheet" href="wheel.scss">
   <title>Spin it</title>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 </head>
 <body>
+
+  <div style="text-align: center;"><img src="src/background.png" height="100%"></div>
 
   <script src="tmp/wheel.js"></script>
 
