--- a/wheel.html
+++ b/wheel.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <div style="text-align: center;"><img src="src/background.png" height="100%"></div>
+  <div style="text-align: center; position: relative; z-index: 10000;"><img src="src/background.png" height="100%"></div>
 
   <script src="tmp/wheel.js"></script>
 
