--- a/wheel.html
+++ b/wheel.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <meta http-equiv="Permissions-Policy" content="interest-cohort=()"></meta>
   <link rel="stylesheet" href="wheel.scss">
   <title>Spin it</title>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
