--- a/wheel.html
+++ b/wheel.html
@@ -3,7 +3,7 @@
   <meta http-equiv="Permissions-Policy" content="interest-cohort=()"></meta>
   <link rel="stylesheet" href="wheel.scss">
   <title>Spin it</title>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 </head>
 <body>
