--- a/wheel.html
+++ b/wheel.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta http-equiv="Permissions-Policy" content="interest-cohort=()"></meta>
-  <link rel="stylesheet" href="wheel.scss">
+  <link rel="stylesheet" href="wheel.css">
   <title>Spin it</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
