--- a/wheel.html
+++ b/wheel.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <div style="text-align: center; position: relative; z-index: 10000;"><img src="src/background.png" height="100%"></div>
+  <!-- <div style="text-align: center; position: relative; z-index: 10000;"><img src="src/background.png" height="100%"></div> -->
 
   <div class="wheel">
       <div class="wheel__inner">
