--- a/wheel.html
+++ b/wheel.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <!-- <meta http-equiv="Permissions-Policy" content="interest-cohort=()"></meta> -->
+  <meta http-equiv="Permissions-Policy" content="interest-cohort=()"></meta>
   <link rel="stylesheet" href="wheel.css">
   <title>Spin it</title>
 
