--- a/wheel.html
+++ b/wheel.html
@@ -3,17 +3,20 @@
   <meta http-equiv="Permissions-Policy" content="interest-cohort=()"></meta>
   <link rel="stylesheet" href="wheel.css">
   <title>Spin it</title>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
 
-  <!-- <div style="text-align: center; position: relative; z-index: 10000;"><img src="src/background.png" height="100%"></div> -->
+  <div class="bc_image">
+    <img src="src/background.png" height="100%">
+  </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <div class="wheel">
       <div class="wheel__inner">
       </div>
   </div>
+
+  <script src="tmp/wheel.js"></script>
 
 </body>
 </html>
