--- a/wheel.html
+++ b/wheel.html
@@ -7,9 +7,19 @@
 </head>
 <body>
 
+
+
   <div class="bc_image">
-    <img src="src/background.png" height="100%">
+    <img src="src/mainPanel.png" height="100%">
   </div>
+
+  <div class="wheel_frame">
+    <img src="src/barabanBuffDebuffbezKNOPKI.png" height="60%">
+  </div>
+
+  <!-- <div class="wheel_button">
+    <img src="src/knopkaKrutit1.png">
+  </div> -->
 
   <div class="wheel">
       <div class="wheel__inner">
@@ -17,6 +27,14 @@
   </div>
 
   <script src="tmp/wheel.js"></script>
+
+
+
+  <!-- canvas.onmousedown = function() {
+    if (!running) {
+        spinTo(Math.random()*sections.length|0, 5000);
+    }
+}; -->
 
 </body>
 </html>
