--- a/wheel.html
+++ b/wheel.html
@@ -7,8 +7,6 @@
 </head>
 <body>
 
-
-
   <div class="bc_image">
     <img src="src/mainPanel.png" height="100%">
   </div>
@@ -17,24 +15,14 @@
     <img src="src/barabanBuffDebuffbezKNOPKI.png" height="60%">
   </div>
 
-  <!-- <div class="wheel_button">
-    <img src="src/knopkaKrutit1.png">
-  </div> -->
-
   <div class="wheel">
       <div class="wheel__inner">
       </div>
   </div>
 
+  <div class="wheel_button"><INPUT type="submit" name="" value=""></div>
+
   <script src="tmp/wheel.js"></script>
-
-
-
-  <!-- canvas.onmousedown = function() {
-    if (!running) {
-        spinTo(Math.random()*sections.length|0, 5000);
-    }
-}; -->
 
 </body>
 </html>
