--- a/wheel.html
+++ b/wheel.html
@@ -24,5 +24,12 @@
 
   <script src="tmp/wheel.js"></script>
 
+  <div class="description">
+    <!-- <p>text -->
+    <span id="descriptionName"></span>
+    <br>
+    <span id="descriptionText"></span>
+  </div>
+
 </body>
 </html>
