--- a/wheel.html
+++ b/wheel.html
@@ -7,29 +7,37 @@
 </head>
 <body>
 
-  <div class="description">
-    <span id="descriptionName"></span>
-    <br>
-    <br>
-    <span id="descriptionText"></span>
+  <div class="wheel_block">
+
+    <div class="yakubgachi">
+      <img src="src/yakubgach4i.png" height="500">
+    </div>
+
+    <div class="bc_image">
+      <img src="src/mainPanel.png" height="100%">
+    </div>
+
+    <div class="wheel_frame">
+      <img src="src/barabanBuffDebuffbezKNOPKI.png" height="60%">
+    </div>
+
+    <div class="wheel">
+        <div class="wheel__inner">
+        </div>
+    </div>
+
+    <div class="wheel_button"><INPUT type="submit" name="" value=""></div>
+
+    <script src="tmp/wheel.js"></script>
+
+    <div class="description">
+      <span id="descriptionName"></span>
+      <br>
+      <br>
+      <span id="descriptionText"></span>
+    </div>
+
   </div>
-
-  <div class="bc_image">
-    <img src="src/mainPanel.png" height="100%">
-  </div>
-
-  <div class="wheel_frame">
-    <img src="src/barabanBuffDebuffbezKNOPKI.png" height="60%">
-  </div>
-
-  <div class="wheel">
-      <div class="wheel__inner">
-      </div>
-  </div>
-
-  <div class="wheel_button"><INPUT type="submit" name="" value=""></div>
-
-  <script src="tmp/wheel.js"></script>
 
 </body>
 </html>
