--- a/wheel.html
+++ b/wheel.html
@@ -9,12 +9,8 @@
 
   <div class="wheel_block">
 
-    <div class="yakubgachi">
-      <img src="src/yakubgach4i.png" height="500">
-    </div>
-
     <div class="bc_image">
-      <img src="src/mainPanel.png" height="100%">
+      <img src="src/backgroundImg.png" height="100%">
     </div>
 
     <div class="wheel_frame">
