edited background, folders

--- a/wheel.html
+++ b/wheel.html
@@ -1,16 +1,13 @@
 <html>
 <head>
   <meta http-equiv="Permissions-Policy" content="interest-cohort=()"></meta>
-  <link rel="stylesheet" href="wheel.css">
+  <link rel="stylesheet" href="styles/wheel.css">
   <title>Spin it</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
-
-  <div class="wheel_block">
-
     <div class="bc_image">
-      <img src="src/backgroundImg.png" height="100%">
+      <img src="src/backgroundImg.png" height="95%">
     </div>
 
     <div class="wheel_frame">
@@ -24,7 +21,7 @@
 
     <div class="wheel_button"><INPUT type="submit" name="" value=""></div>
 
-    <script src="tmp/wheel.js"></script>
+    <script src="scripts/wheel.js"></script>
 
     <div class="description">
       <span id="descriptionName"></span>
@@ -32,8 +29,6 @@
       <br>
       <span id="descriptionText"></span>
     </div>
-
-  </div>
 
 </body>
 </html>
