--- a/effects-wheel.html
+++ b/effects-wheel.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta http-equiv="Permissions-Policy" content="interest-cohort=()"></meta>
-  <link rel="stylesheet" href="styles/wheel.css">
+  <link rel="stylesheet" href="styles/effectsWheel.css">
   <title>Spin it</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
@@ -21,7 +21,7 @@
 
     <div class="wheel_button"><INPUT type="submit" name="" value=""></div>
 
-    <script src="scripts/wheel.js"></script>
+    <script src="scripts/effectsWheel.js"></script>
 
     <div class="description">
       <span id="descriptionName"></span>
