--- a/subday.html
+++ b/subday.html
@@ -2,19 +2,22 @@
 <head>
 <title>Roadhouse subday</title>
 
-<!-- <link rel="stylesheet" href="styles/typeWheel.css"> -->
+<link rel="stylesheet" href="styles/subday.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
 
 </head>
 <body>
 
-
-
 <iframe id="wheelFrame" src="sdtype-wheel.html" width="100%" height="100%" frameborder="0"> </iframe>
 
-<div class="twheel_button"><INPUT type="submit" name="" value="">type</div>
-<div class="ewheel_button"><INPUT type="submit" name="" value="">effect</div>
+<p><img class="nav_panel" src="src\nizhnayaPanel.png" usemap="#map" alt="Навигация"></p>
+  <p><map name="map">
+    <area class="twheel_button" target="" alt="ap" title="ap" coords="12,49,629,94" shape="rect">
+    <area class="ewheel_button" target="" alt="op" title="op" coords="766,52,1384,92" shape="rect">
+  </map></p>
+
+<!-- <div class="twheel_button"><INPUT type="submit" name="type" value=""></div>
+<div class="ewheel_button"><INPUT type="submit" name="effect" value=""></div> -->
 
 <script src="scripts/subday.js"></script>
 
