--- a/effects-wheel.html
+++ b/effects-wheel.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <div class="bc_image">
-      <img src="src/backgroundImg.png" height="95%">
+      <img src="src/backgroundImg.png" height="93%">
     </div>
 
     <div class="wheel_frame">
-      <img src="src/barabanBuffDebuffbezKNOPKI.png" height="60%">
+      <img src="src/barabanBuffDebuffbezKNOPKI.png" width="100%">
     </div>
 
     <div class="wheel">
