--- a/subday.html
+++ b/subday.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Roadhouse subday</title>
-
+<meta charset="utf-8">
 <link rel="stylesheet" href="styles/subday.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
