--- a/subday.html
+++ b/subday.html
@@ -12,8 +12,8 @@
 
 <p><img class="nav_panel" src="src\nizhnayaPanel.png" usemap="#map" alt="Навигация"></p>
   <p><map name="map">
-    <area class="twheel_button" target="" alt="ap" title="ap" coords="12,49,629,94" shape="rect">
-    <area class="ewheel_button" target="" alt="op" title="op" coords="766,52,1384,92" shape="rect">
+    <area class="twheel_button" target="" alt="ap" title="стили" coords="12,49,629,94" shape="rect">
+    <area class="ewheel_button" target="" alt="op" title="баффы/дебаффы" coords="766,52,1384,92" shape="rect">
   </map></p>
 
 <script src="scripts/subday.js"></script>
