legendary on center

--- a/effects-wheel.html
+++ b/effects-wheel.html
@@ -16,6 +16,10 @@
         <span id="descriptionText"></span>
       </div>
 
+      <div class="legendaryDesc">
+        <span id="descriptionLegendary"></span>
+      </div>
+
       <div class="wheel">
           <div class="wheel__inner">
           </div>
