--- a/sdtype-wheel.html
+++ b/sdtype-wheel.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <meta charset="utf-8">
   <meta http-equiv="Permissions-Policy" content="interest-cohort=()"></meta>
   <link rel="stylesheet" href="styles/typeWheel.css">
   <title>Spin it</title>
@@ -8,7 +9,7 @@
 <body>
     <div class="bc_image">
       <img src="src/backgroundImg.png" height="93%">
-      
+
       <div class="description">
         <span id="descriptionName"></span>
         <br>
