--- a/effects-wheel.html
+++ b/effects-wheel.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <meta charset="utf-8">
   <meta http-equiv="Permissions-Policy" content="interest-cohort=()"></meta>
   <link rel="stylesheet" href="styles/effectsWheel.css">
   <title>Spin it</title>
