--- a/horror-wheel.html
+++ b/horror-wheel.html
@@ -8,11 +8,10 @@
 </head>
 <body>
     <div class="bc_image">
-      <img src="src/backgroundImg.png" height="93%">
+      <!-- <img src="src/backgroundImg.png" height="93%"> -->
 
       <div class="description">
         <span id="descriptionName"></span>
-        <br>
         <br>
         <span id="descriptionText"></span>
       </div>
@@ -27,7 +26,7 @@
       </div>
 
       <div class="wheel_frame">
-        <img src="src/barabanBuffDebuffbezKNOPKI.png" width="100%">
+        <!-- <img src="src/barabanBuffDebuffbezKNOPKI.png" width="100%"> -->
       </div>
 
     </div>
