icons and horror sounds

--- a/horror-wheel.html
+++ b/horror-wheel.html
@@ -26,7 +26,7 @@
       </div>
 
       <div class="wheel_frame">
-        <!-- <img src="src/barabanBuffDebuffbezKNOPKI.png" width="100%"> -->
+        <img src="src/assets/wheel_horror/wheel_frame.png" width="100%">
       </div>
 
     </div>
